# signature.py

./: .pre-commit-config.yaml  CODE_OF_CONDUCT.md  LICENSE.md  README.md  index.html  pyproject.toml
.github/workflows/: run-pytest.yaml
signature/: app.py  index.html  manifest.json  package-lock.json  requirements.txt
signature/css/: signature.css  signature.css.map
signature/dev/: Accordion.py
signature/js/: signature.js
signature/modules/: mod_form.py  mod_navbar.py  mod_preview.py
signature/scss/: signature.scss
signature/template/: template.html
signature/tests/: test_accordion_panels.py  test_e2e.py
signature/tests/pytest-playwright/: test_e2e.py
signature/tests/pytest-unit/: test_accordion_panels.py
site/: index.html
site/shinylive/pyodide/: atomicwrites-1.4.1-py2.py3-none-any.whl  attrs-23.2.0-py3-none-any.whl  faicons-0.2.2-py3-none-any.whl  iniconfig-2.0.0-py3-none-any.whl  more_itertools-10.2.0-py3-none-any.whl  pluggy-1.5.0-py3-none-any.whl  py-1.11.0-py2.py3-none-any.whl  pytest-8.1.1-py3-none-any.whl  setuptools-69.5.1-py3-none-any.whl
